force-app/main/default/objects/Product2/fields/GI_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>GI_Registration_Number__c</fullName>
    <label>GI Registration Number</label>
    <type>Text</type>
    <length>50</length>
</CustomField>