force-app/main/default/objects/Product2/fields/GI_Status__c.field-meta.xml
<CustomField>
    <fullName>GI_Status__c</fullName>
    <label>GI Status</label>
    <type>Picklist</type>
    <valueSet>
        <restrictedPicklist>true</restrictedPicklist>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Not Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>