force-app/main/default/objects/Product2/fields/Origin_City__c.field-meta.xml
<CustomField>
    <fullName>Origin_City__c</fullName>
    <label>Origin City</label>
    <type>Text</type>
    <length>100</length>
</CustomField>