force-app/main/default/objects/Product2/fields/Origin_Story__c.field-meta.xml
<CustomField>
    <fullName>Origin_Story__c</fullName>
    <label>Origin Story</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>