force-app/main/default/objects/Product2/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GI Tag Product</fullName>
            </value>
            <value>
                <fullName>Handloom</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Handicraft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>